# mtn-exec-copilot

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  azure.yaml  commitmsg.txt  pyproject.toml
.azure/: deployment-plan.md
.github/workflows/: azure-dev.yml
assets/avatar/: README.md
backend/: config.py  main.py
backend/acs/: __init__.py  bridge.py  client.py  routes.py
backend/api/: routes.py  websocket.py
backend/bot/: __init__.py  agent_runtime.py  app.py  cards.py
backend/voice/: __init__.py  auth.py  builders.py  catalog.py  event_handlers.py  functions.py  handler.py  router.py  routing.py
data/: Board Meeting – 10 June 2021.docx  Board Meeting – 10 May 2008.docx  Board Meeting – 12 November 2015.docx  Board Meeting – 15 February 2026.docx  Board Meeting – 15 March 2006.docx  Board Meeting – 15 September 2023.docx  Board Meeting – 20 October 2025.docx  Board Meeting – 30 June 2013.docx  Board Meeting – 5 July 2018.docx  Board Meeting – 5 March 2019.docx  README.md
docs/: architecture.md  auth.md  configuration.md  deployment.md  development.md  teams-meeting-bot.md
frontend/: acs-join.html  acs-join.js  app.js  companion-config.html  companion-config.js  companion.html  companion.js  index.html  style.css  teams.js
infra/: abbreviations.json  main.bicep  main.json  main.parameters.json  resources.bicep
infra/modules/: acsRoleForApp.bicep  aiSearch.bicep  applicationInsights.bicep  botService.bicep  communicationServices.bicep  containerApp.bicep  containerAppsEnvironment.bicep  containerRegistry.bicep  foundry.bicep  (+7 more)
meeting-bot/: .gitignore  MeetingBot.csproj  Program.cs  README.md  appsettings.json
prompts/: README.md
scripts/: _routing_harness.py  agent_create_with_tools.py  grant_byo_rbac.py  preflight.py  setup_aisearch_index.py  setup_foundry_agent.py  test_aisearch_query.py  test_foundry_agent.py
teams/: README.md  build_package.py  manifest.template.json
(+17 files in other folders)
